[Edit] Page CSS

--- a/client/src/fonts/fonts.css
+++ b/client/src/fonts/fonts.css
@@ -28,3 +28,17 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: "HaenamFont";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2202-2@1.0/HaenamFont.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "InfinitySans-RegularA1";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/InfinitySans-RegularA1.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
