--- a/client/src/fonts/fonts.css
+++ b/client/src/fonts/fonts.css
@@ -42,3 +42,10 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: "HS-Regular";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/HS-Regular.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
